# CS225-Final-Project

./: .gitignore  CMakeLists.txt  README.md  StyleGuide.txt  main
Charles Test Folder/file 1/: PS322_Quiz7.txt
FinalProject/: CMakeLists.txt  Group.cpp  Group.h  Makefile  TXhold  ai.cpp  cards.cpp  cards.h  cards.hpp  deck.cpp  deck.hpp  file.cpp  game.h  game.hpp  global.cpp  global.hpp  hand.cpp  hand.hpp  human.cpp  main.cpp  player.cpp  player.h  player.hpp  printDisplay.cpp  scratch1.cpp  scratch1.h  table.cpp  table.h  table.hpp
FinalProject.xcodeproj/: project.pbxproj
